Add path for discarded menus in sidebar partial of Dashboard views

--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -52,7 +52,7 @@
 							</li>
 
 							<li>
-								<%= link_to "Discarded Menus", nil, class: "linkto-text" %>
+								<%= link_to "Discarded Menus", discarded_menus_path, class: "linkto-text" %>
 							</li>
 						</ul>
 					</li>
