Add route path to Add Menu link of sidebar partial of Dashboard views

--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -44,7 +44,7 @@
 
 						<ul class="collapse nav-sub" aria-expanded="false">
 							<li>
-								<%= link_to "Add Menu", nil, class: "linkto-text" %>
+								<%= link_to "Add Menu", new_menu_path, class: "linkto-text" %>
 							</li>
 
 							<li>
