--- a/app/views/menus/edit.html.erb
+++ b/app/views/menus/edit.html.erb
@@ -9,7 +9,11 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" id="pills-2-tab" data-toggle="pill" href="#pills-2" role="tab" aria-controls="pills-2" aria-selected="false">Timings</a>
+          <a class="nav-link" id="pills-2-tab" data-toggle="pill" href="#pills-2" role="tab" aria-controls="pills-2" aria-selected="false">Items</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" id="pills-3-tab" data-toggle="pill" href="#pills-3" role="tab" aria-controls="pills-3" aria-selected="false">Timings</a>
         </li>
       </ul>
 
