Add condition for edit action in menu_item_fields partial of Menu views

--- a/app/views/menus/_menu_item_fields.html.erb
+++ b/app/views/menus/_menu_item_fields.html.erb
@@ -6,7 +6,12 @@
     <div class="row">
       <div class="col-6">
         <div class="form-group col-12 ml-3">
-          <%= f.check_box :_destroy, {}, '0', '1' %>
+          <% if  f.object.persisted? %>
+            <%= f.check_box :_destroy, {checked: true}, '0', '1' %>
+          <% else %>
+            <%= f.check_box :_destroy, {}, '0', '1' %>
+          <% end %>
+
           <%= f.label :_destroy, f.object.menu_itemable.name %>
         </div>
       </div>
